--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maker",
+  "name": "Maker",
   "version": "0.0.0",
   "description": "Make amazing apps fast",
   "repository": "HashtasticDesign/maker",
